Fix quotee spacing
Adjust quotee spacing for better positioning.

--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ body {
 }
 
 .quotee {
-    align-self: flex-end;
-    margin-right: 300px;
+    align-self: center;
+    margin-left: 384px;
 }
 
 
